# student-attendance-django

./: .env  .env.example  .gitignore  BACKUP_README.md  BACKUP_SYSTEM_STATUS.md  FRONTEND_ENHANCEMENT_DOCUMENTATION.md  README.md  add_alan_advisor.py  backup_config.env  backup_manager.py  check_backup_status.py  create_advisor_profiles.py  create_staff_user.py  create_test_advisor.py  db.sqlite3  generate_ssl.sh  glassmorphic_demo.html  load_demo_data.py  main.py  manage.py  package-lock.json  package.json  pm2.config.json  pyproject.toml  restart_server.sh  run_server.sh  sample_bulk_students.csv  setup.sh  setup_backup.sh  setup_complete_groups.py  setup_groups.py  stop_server.sh  tailwind.config.js  temp_main.py  test_admin_endpoints.sh  users.txt
Authentication/: apps.py  urls.py  views.py
Frontend/templates/: base.html  notification_test.html
StudentAttendance/: asgi.py  settings.py  urls.py  wsgi.py
admin_management/: README.md  admin.py  models.py  tests.py  urls.py  views.py
advisor_dashboard/: admin.py  apps.py  models.py  urls.py  views.py
advisor_dashboard/migrations/: 0001_initial.py  0002_staffcreator.py  __init__.py
advisor_dashboard/templatetags/: advisor_extras.py
assets/: input.css
attendance_dashboard/: apps.py  urls.py  views.py
core/: admin.py  api_views.py  models.py  urls.py
core/migrations/: 0001_initial.py  (+9 more)
docs/: ARCHITECTURE.md  IMAGE_FLOW.md
gallery/: gallery_Computer Science_2027.pth
prediction_backend/: apps.py  models.py  services.py  urls.py  views.py
ssl/: server.crt  server.key  server.pem
(+81 files in other folders)
